--- a/hands_on_ex/hands_on_ex02/hands_on_ex02.qmd
+++ b/hands_on_ex/hands_on_ex02/hands_on_ex02.qmd
@@ -129,7 +129,7 @@ ggplot(data=exam_data,
 ::: panel-tabset
 ## The plot
 
-```{r, echo=FALSE, , warning=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 #| eval: true
 ggplot(data=exam_data, 
              aes(x = MATHS)) +
@@ -162,7 +162,7 @@ ggplot(data=exam_data,
 ::: panel-tabset
 ## The plot
 
-```{r, echo=FALSE, , warning=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 #| eval: true
 ggplot(data=exam_data, 
              aes(x = MATHS)) +
@@ -192,7 +192,27 @@ ggplot(data=exam_data,
 
 ## **Working with hrbthems package**
 
-```{r, warning=FALSE}
+::: panel-tabset
+## The plot
+
+```{r, echo=FALSE, warning=FALSE}
+#| eval: true
+ggplot(data=exam_data, 
+             aes(x = MATHS)) +
+  geom_histogram(bins=20, 
+                 boundary = 100,
+                 color="grey25", 
+                 fill="grey90") +
+  ggtitle("Distribution of Maths scores") +
+  theme_ipsum()
+
+```
+
+## The code
+
+```{r}
+#| eval: false
+
 ggplot(data=exam_data, 
              aes(x = MATHS)) +
   geom_histogram(bins=20, 
@@ -202,8 +222,14 @@ ggplot(data=exam_data,
   ggtitle("Distribution of Maths scores") +
   theme_ipsum()
 ```
+:::
 
-```{r, warning=FALSE}
+::: panel-tabset
+## The plot
+
+```{r, echo=FALSE, warning =FALSE}
+#| eval: true
+
 ggplot(data=exam_data, 
              aes(x = MATHS)) +
   geom_histogram(bins=20, 
@@ -214,11 +240,37 @@ ggplot(data=exam_data,
   theme_ipsum(axis_title_size = 18,
               base_size = 15,
               grid = "Y")
+
 ```
+
+## The code
+
+```{r}
+#| eval: false
+ggplot(data=exam_data, 
+             aes(x = MATHS)) +
+  geom_histogram(bins=20, 
+                 boundary = 100,
+                 color="grey25", 
+                 fill="grey90") +
+  ggtitle("Distribution of Maths scores") +
+  theme_ipsum(axis_title_size = 18,
+              base_size = 15,
+              grid = "Y")
+
+```
+:::
 
 ## **Beyond Single Graph**
 
+## 
+
+::: panel-tabset
+## The code
+
 ```{r}
+
+
 p1 <- ggplot(data=exam_data, 
              aes(x = MATHS)) +
   geom_histogram(bins=20, 
@@ -227,9 +279,18 @@ p1 <- ggplot(data=exam_data,
                  fill="grey90") + 
   coord_cartesian(xlim=c(0,100)) +
   ggtitle("Distribution of Maths scores")
+
 ```
+:::
+
+## 
+
+::: panel-tabset
+## The code
 
 ```{r}
+
+
 p2 <- ggplot(data=exam_data, 
              aes(x = ENGLISH)) +
   geom_histogram(bins=20, 
@@ -238,11 +299,17 @@ p2 <- ggplot(data=exam_data,
                  fill="grey90") +
   coord_cartesian(xlim=c(0,100)) +
   ggtitle("Distribution of English scores")
+
 ```
+:::
 
 I draw a scatterplot for English score versus Maths score by as shown below
 
+::: panel-tabset
+## The code
+
 ```{r}
+
 p3 <- ggplot(data=exam_data, 
              aes(x= MATHS, 
                  y=ENGLISH)) +
@@ -252,7 +319,9 @@ p3 <- ggplot(data=exam_data,
   coord_cartesian(xlim=c(0,100),
                   ylim=c(0,100)) +
   ggtitle("English scores versus Maths scores for Primary 3")
+
 ```
+:::
 
 ## **Combining two ggplot2 graphs**
 
@@ -280,7 +349,7 @@ p1 + p2
 ::: panel-tabset
 ## The plot
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE, message=FALSE}
 #| eval: true
 
 (p1 / p2) | p3
@@ -300,7 +369,7 @@ p1 + p2
 ::: panel-tabset
 ## The plot
 
-```{r, echo=FALSE, , message=FALSE}
+```{r, echo=FALSE, message=FALSE}
 #| eval: true
 
 ((p1 / p2) | p3) + 
@@ -322,7 +391,7 @@ p1 + p2
 ::: panel-tabset
 ## The plot
 
-```{r, echo=FALSE, , message=FALSE}
+```{r, echo=FALSE, message=FALSE}
 #| eval: true
 
 p3 + inset_element(p2, 
@@ -351,7 +420,7 @@ p3 + inset_element(p2,
 ::: panel-tabset
 ## The plot
 
-```{r, echo=FALSE, , message=FALSE}
+```{r, echo=FALSE,message=FALSE}
 #| eval: true
 
 patchwork <- (p1 / p2) | p3
